// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for isOpen: false, position: left, hasHeader: false, hasFooter: false, hasSubFooter: false, theme: light 1`] = `
":host {
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  display: flex !important;
  position: fixed !important;
  z-index: 99998 !important;
  visibility: hidden !important;
  transition: visibility 0s linear 0.5s !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(64, 64, 68, 0.67) !important;
  pointer-events: none !important;
  opacity: 0 !important;
  backdrop-filter: blur(0px) !important;
  -webkit-backdrop-filter: blur(0px) !important;
  transition: opacity 0.5s cubic-bezier(.16,1,.3,1), backdrop-filter 0.5s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.5s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.header {
  display: flex;
  justify-content: flex-end;
  background: #FFF;
  position: sticky;
  top: 0;
  z-index: 2;
}
.header--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px 5px 10px;
}
.dismiss {
  margin: 16px;
  height: fit-content;
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
.root {
  color: #010205;
  display: flex;
  flex-direction: column;
  position: relative;
  margin-right: auto;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  background: #FFF;
  opacity: 0;
  transform: translate3d(-100%, 0, 0);
  transition: opacity 0.5s cubic-bezier(0.77, 0, 0.175, 1) 0.5s, transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
  box-shadow: 3px 0px 30px rgba(0, 0, 0, 0.25);
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0)), linear-gradient(to bottom, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}
@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: false, position: left, hasHeader: true, hasFooter: false, hasSubFooter: true, theme: dark 1`] = `
":host {
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  display: flex !important;
  position: fixed !important;
  z-index: 99998 !important;
  visibility: hidden !important;
  transition: visibility 0s linear 0.5s !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(64, 64, 68, 0.67) !important;
  pointer-events: none !important;
  opacity: 0 !important;
  backdrop-filter: blur(0px) !important;
  -webkit-backdrop-filter: blur(0px) !important;
  transition: opacity 0.5s cubic-bezier(.16,1,.3,1), backdrop-filter 0.5s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.5s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.header {
  display: flex;
  flex-direction: row-reverse;
  justify-content: flex-end;
  background: #0E0E12;
  position: sticky;
  top: 0;
  z-index: 2;
}
.header--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 10px;
}
.header-content {
  flex: auto;
  padding: 16px 0 16px clamp(32px, 2.75vw + 23px, 76px);
}
.dismiss {
  margin: 16px;
  height: fit-content;
  border: 2px solid #0E0E12;
  border-radius: 4px;
  background: #0E0E12;
}
.root {
  color: #FBFCFF;
  display: flex;
  flex-direction: column;
  position: relative;
  margin-right: auto;
  box-sizing: border-box;
  overflow-y: auto;
  overscroll-behavior-y: none;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  background: #0E0E12;
  opacity: 0;
  transform: translate3d(-100%, 0, 0);
  transition: opacity 0.5s cubic-bezier(0.77, 0, 0.175, 1) 0.5s, transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
  box-shadow: 3px 0px 30px rgba(0, 0, 0, 0.25);
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
}
.sub-footer {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
}
@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: false, position: left, hasHeader: true, hasFooter: true, hasSubFooter: true, theme: dark 1`] = `
":host {
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  display: flex !important;
  position: fixed !important;
  z-index: 99998 !important;
  visibility: hidden !important;
  transition: visibility 0s linear 0.5s !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(64, 64, 68, 0.67) !important;
  pointer-events: none !important;
  opacity: 0 !important;
  backdrop-filter: blur(0px) !important;
  -webkit-backdrop-filter: blur(0px) !important;
  transition: opacity 0.5s cubic-bezier(.16,1,.3,1), backdrop-filter 0.5s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.5s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.header {
  display: flex;
  flex-direction: row-reverse;
  justify-content: flex-end;
  background: #0E0E12;
  position: sticky;
  top: 0;
  z-index: 2;
}
.header--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 10px;
}
.header-content {
  flex: auto;
  padding: 16px 0 16px clamp(32px, 2.75vw + 23px, 76px);
}
.dismiss {
  margin: 16px;
  height: fit-content;
  border: 2px solid #0E0E12;
  border-radius: 4px;
  background: #0E0E12;
}
.root {
  color: #FBFCFF;
  display: flex;
  flex-direction: column;
  position: relative;
  margin-right: auto;
  box-sizing: border-box;
  overflow-y: auto;
  overscroll-behavior-y: none;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  background: #0E0E12;
  opacity: 0;
  transform: translate3d(-100%, 0, 0);
  transition: opacity 0.5s cubic-bezier(0.77, 0, 0.175, 1) 0.5s, transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
  box-shadow: 3px 0px 30px rgba(0, 0, 0, 0.25);
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
}
.footer {
  background: #0E0E12;
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: sticky;
  z-index: 1;
  bottom: 0;
}
.footer--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px -5px 10px;
}
.sub-footer {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
}
@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: false, position: right, hasHeader: false, hasFooter: false, hasSubFooter: false, theme: light 1`] = `
":host {
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  display: flex !important;
  position: fixed !important;
  z-index: 99998 !important;
  visibility: hidden !important;
  transition: visibility 0s linear 0.5s !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(64, 64, 68, 0.67) !important;
  pointer-events: none !important;
  opacity: 0 !important;
  backdrop-filter: blur(0px) !important;
  -webkit-backdrop-filter: blur(0px) !important;
  transition: opacity 0.5s cubic-bezier(.16,1,.3,1), backdrop-filter 0.5s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.5s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.header {
  display: flex;
  justify-content: flex-end;
  background: #FFF;
  position: sticky;
  top: 0;
  z-index: 2;
}
.header--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px 5px 10px;
}
.dismiss {
  margin: 16px;
  height: fit-content;
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
.root {
  color: #010205;
  display: flex;
  flex-direction: column;
  position: relative;
  margin-left: auto;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  background: #FFF;
  opacity: 0;
  transform: translate3d(100%, 0, 0);
  transition: opacity 0.5s cubic-bezier(0.77, 0, 0.175, 1) 0.5s, transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
  box-shadow: -3px 0px 30px rgba(0, 0, 0, 0.25);
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0)), linear-gradient(to bottom, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}
@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: false, position: right, hasHeader: true, hasFooter: false, hasSubFooter: true, theme: dark 1`] = `
":host {
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  display: flex !important;
  position: fixed !important;
  z-index: 99998 !important;
  visibility: hidden !important;
  transition: visibility 0s linear 0.5s !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(64, 64, 68, 0.67) !important;
  pointer-events: none !important;
  opacity: 0 !important;
  backdrop-filter: blur(0px) !important;
  -webkit-backdrop-filter: blur(0px) !important;
  transition: opacity 0.5s cubic-bezier(.16,1,.3,1), backdrop-filter 0.5s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.5s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.header {
  display: flex;
  flex-direction: row-reverse;
  justify-content: flex-end;
  background: #0E0E12;
  position: sticky;
  top: 0;
  z-index: 2;
}
.header--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 10px;
}
.header-content {
  flex: auto;
  padding: 16px 0 16px clamp(32px, 2.75vw + 23px, 76px);
}
.dismiss {
  margin: 16px;
  height: fit-content;
  border: 2px solid #0E0E12;
  border-radius: 4px;
  background: #0E0E12;
}
.root {
  color: #FBFCFF;
  display: flex;
  flex-direction: column;
  position: relative;
  margin-left: auto;
  box-sizing: border-box;
  overflow-y: auto;
  overscroll-behavior-y: none;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  background: #0E0E12;
  opacity: 0;
  transform: translate3d(100%, 0, 0);
  transition: opacity 0.5s cubic-bezier(0.77, 0, 0.175, 1) 0.5s, transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
  box-shadow: -3px 0px 30px rgba(0, 0, 0, 0.25);
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
}
.sub-footer {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
}
@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: false, position: right, hasHeader: true, hasFooter: true, hasSubFooter: true, theme: dark 1`] = `
":host {
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  display: flex !important;
  position: fixed !important;
  z-index: 99998 !important;
  visibility: hidden !important;
  transition: visibility 0s linear 0.5s !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(64, 64, 68, 0.67) !important;
  pointer-events: none !important;
  opacity: 0 !important;
  backdrop-filter: blur(0px) !important;
  -webkit-backdrop-filter: blur(0px) !important;
  transition: opacity 0.5s cubic-bezier(.16,1,.3,1), backdrop-filter 0.5s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.5s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.header {
  display: flex;
  flex-direction: row-reverse;
  justify-content: flex-end;
  background: #0E0E12;
  position: sticky;
  top: 0;
  z-index: 2;
}
.header--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 10px;
}
.header-content {
  flex: auto;
  padding: 16px 0 16px clamp(32px, 2.75vw + 23px, 76px);
}
.dismiss {
  margin: 16px;
  height: fit-content;
  border: 2px solid #0E0E12;
  border-radius: 4px;
  background: #0E0E12;
}
.root {
  color: #FBFCFF;
  display: flex;
  flex-direction: column;
  position: relative;
  margin-left: auto;
  box-sizing: border-box;
  overflow-y: auto;
  overscroll-behavior-y: none;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  background: #0E0E12;
  opacity: 0;
  transform: translate3d(100%, 0, 0);
  transition: opacity 0.5s cubic-bezier(0.77, 0, 0.175, 1) 0.5s, transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
  box-shadow: -3px 0px 30px rgba(0, 0, 0, 0.25);
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
}
.footer {
  background: #0E0E12;
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: sticky;
  z-index: 1;
  bottom: 0;
}
.footer--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px -5px 10px;
}
.sub-footer {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
}
@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: left, hasHeader: false, hasFooter: false, hasSubFooter: false, theme: dark 1`] = `
":host {
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  display: flex !important;
  position: fixed !important;
  z-index: 99998 !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(64, 64, 68, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.5s cubic-bezier(.16,1,.3,1), backdrop-filter 0.5s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.5s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.header {
  display: flex;
  justify-content: flex-end;
  background: #0E0E12;
  position: sticky;
  top: 0;
  z-index: 2;
}
.header--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 10px;
}
.dismiss {
  margin: 16px;
  height: fit-content;
  border: 2px solid #0E0E12;
  border-radius: 4px;
  background: #0E0E12;
}
.root {
  color: #FBFCFF;
  display: flex;
  flex-direction: column;
  position: relative;
  margin-right: auto;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  background: #0E0E12;
  opacity: 1;
  transform: initial;
  transition: opacity 0.5s cubic-bezier(0.77, 0, 0.175, 1) 0s, transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
  box-shadow: 3px 0px 30px rgba(0, 0, 0, 0.25);
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #0E0E12, #0E0E12), linear-gradient(to top, #0E0E12, #0E0E12), linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(14, 14, 18, 0)), linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(14, 14, 18, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}
@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: left, hasHeader: false, hasFooter: true, hasSubFooter: false, theme: light 1`] = `
":host {
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  display: flex !important;
  position: fixed !important;
  z-index: 99998 !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(64, 64, 68, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.5s cubic-bezier(.16,1,.3,1), backdrop-filter 0.5s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.5s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.header {
  display: flex;
  justify-content: flex-end;
  background: #FFF;
  position: sticky;
  top: 0;
  z-index: 2;
}
.header--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px 5px 10px;
}
.dismiss {
  margin: 16px;
  height: fit-content;
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
.root {
  color: #010205;
  display: flex;
  flex-direction: column;
  position: relative;
  margin-right: auto;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  background: #FFF;
  opacity: 1;
  transform: initial;
  transition: opacity 0.5s cubic-bezier(0.77, 0, 0.175, 1) 0s, transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
  box-shadow: 3px 0px 30px rgba(0, 0, 0, 0.25);
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0)), linear-gradient(to bottom, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}
.footer {
  background: #FFF;
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: sticky;
  z-index: 1;
  bottom: 0;
}
.footer--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px -5px 10px;
}
@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: left, hasHeader: true, hasFooter: false, hasSubFooter: false, theme: light 1`] = `
":host {
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  display: flex !important;
  position: fixed !important;
  z-index: 99998 !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(64, 64, 68, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.5s cubic-bezier(.16,1,.3,1), backdrop-filter 0.5s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.5s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.header {
  display: flex;
  flex-direction: row-reverse;
  justify-content: flex-end;
  background: #FFF;
  position: sticky;
  top: 0;
  z-index: 2;
}
.header--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px 5px 10px;
}
.header-content {
  flex: auto;
  padding: 16px 0 16px clamp(32px, 2.75vw + 23px, 76px);
}
.dismiss {
  margin: 16px;
  height: fit-content;
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
.root {
  color: #010205;
  display: flex;
  flex-direction: column;
  position: relative;
  margin-right: auto;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  background: #FFF;
  opacity: 1;
  transform: initial;
  transition: opacity 0.5s cubic-bezier(0.77, 0, 0.175, 1) 0s, transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
  box-shadow: 3px 0px 30px rgba(0, 0, 0, 0.25);
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0)), linear-gradient(to bottom, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}
@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: left, hasHeader: true, hasFooter: true, hasSubFooter: false, theme: dark 1`] = `
":host {
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  display: flex !important;
  position: fixed !important;
  z-index: 99998 !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(64, 64, 68, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.5s cubic-bezier(.16,1,.3,1), backdrop-filter 0.5s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.5s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.header {
  display: flex;
  flex-direction: row-reverse;
  justify-content: flex-end;
  background: #0E0E12;
  position: sticky;
  top: 0;
  z-index: 2;
}
.header--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 10px;
}
.header-content {
  flex: auto;
  padding: 16px 0 16px clamp(32px, 2.75vw + 23px, 76px);
}
.dismiss {
  margin: 16px;
  height: fit-content;
  border: 2px solid #0E0E12;
  border-radius: 4px;
  background: #0E0E12;
}
.root {
  color: #FBFCFF;
  display: flex;
  flex-direction: column;
  position: relative;
  margin-right: auto;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  background: #0E0E12;
  opacity: 1;
  transform: initial;
  transition: opacity 0.5s cubic-bezier(0.77, 0, 0.175, 1) 0s, transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
  box-shadow: 3px 0px 30px rgba(0, 0, 0, 0.25);
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #0E0E12, #0E0E12), linear-gradient(to top, #0E0E12, #0E0E12), linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(14, 14, 18, 0)), linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(14, 14, 18, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}
.footer {
  background: #0E0E12;
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: sticky;
  z-index: 1;
  bottom: 0;
}
.footer--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px -5px 10px;
}
@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: left, hasHeader: true, hasFooter: true, hasSubFooter: true, theme: light 1`] = `
":host {
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  display: flex !important;
  position: fixed !important;
  z-index: 99998 !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(64, 64, 68, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.5s cubic-bezier(.16,1,.3,1), backdrop-filter 0.5s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.5s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.header {
  display: flex;
  flex-direction: row-reverse;
  justify-content: flex-end;
  background: #FFF;
  position: sticky;
  top: 0;
  z-index: 2;
}
.header--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px 5px 10px;
}
.header-content {
  flex: auto;
  padding: 16px 0 16px clamp(32px, 2.75vw + 23px, 76px);
}
.dismiss {
  margin: 16px;
  height: fit-content;
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
.root {
  color: #010205;
  display: flex;
  flex-direction: column;
  position: relative;
  margin-right: auto;
  box-sizing: border-box;
  overflow-y: auto;
  overscroll-behavior-y: none;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  background: #FFF;
  opacity: 1;
  transform: initial;
  transition: opacity 0.5s cubic-bezier(0.77, 0, 0.175, 1) 0s, transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
  box-shadow: 3px 0px 30px rgba(0, 0, 0, 0.25);
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
}
.footer {
  background: #FFF;
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: sticky;
  z-index: 1;
  bottom: 0;
}
.footer--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px -5px 10px;
}
.sub-footer {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
}
@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: right, hasHeader: false, hasFooter: false, hasSubFooter: false, theme: dark 1`] = `
":host {
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  display: flex !important;
  position: fixed !important;
  z-index: 99998 !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(64, 64, 68, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.5s cubic-bezier(.16,1,.3,1), backdrop-filter 0.5s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.5s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.header {
  display: flex;
  justify-content: flex-end;
  background: #0E0E12;
  position: sticky;
  top: 0;
  z-index: 2;
}
.header--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 10px;
}
.dismiss {
  margin: 16px;
  height: fit-content;
  border: 2px solid #0E0E12;
  border-radius: 4px;
  background: #0E0E12;
}
.root {
  color: #FBFCFF;
  display: flex;
  flex-direction: column;
  position: relative;
  margin-left: auto;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  background: #0E0E12;
  opacity: 1;
  transform: initial;
  transition: opacity 0.5s cubic-bezier(0.77, 0, 0.175, 1) 0s, transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
  box-shadow: -3px 0px 30px rgba(0, 0, 0, 0.25);
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #0E0E12, #0E0E12), linear-gradient(to top, #0E0E12, #0E0E12), linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(14, 14, 18, 0)), linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(14, 14, 18, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}
@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: right, hasHeader: false, hasFooter: true, hasSubFooter: false, theme: light 1`] = `
":host {
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  display: flex !important;
  position: fixed !important;
  z-index: 99998 !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(64, 64, 68, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.5s cubic-bezier(.16,1,.3,1), backdrop-filter 0.5s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.5s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.header {
  display: flex;
  justify-content: flex-end;
  background: #FFF;
  position: sticky;
  top: 0;
  z-index: 2;
}
.header--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px 5px 10px;
}
.dismiss {
  margin: 16px;
  height: fit-content;
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
.root {
  color: #010205;
  display: flex;
  flex-direction: column;
  position: relative;
  margin-left: auto;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  background: #FFF;
  opacity: 1;
  transform: initial;
  transition: opacity 0.5s cubic-bezier(0.77, 0, 0.175, 1) 0s, transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
  box-shadow: -3px 0px 30px rgba(0, 0, 0, 0.25);
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0)), linear-gradient(to bottom, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}
.footer {
  background: #FFF;
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: sticky;
  z-index: 1;
  bottom: 0;
}
.footer--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px -5px 10px;
}
@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: right, hasHeader: true, hasFooter: false, hasSubFooter: false, theme: light 1`] = `
":host {
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  display: flex !important;
  position: fixed !important;
  z-index: 99998 !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(64, 64, 68, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.5s cubic-bezier(.16,1,.3,1), backdrop-filter 0.5s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.5s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.header {
  display: flex;
  flex-direction: row-reverse;
  justify-content: flex-end;
  background: #FFF;
  position: sticky;
  top: 0;
  z-index: 2;
}
.header--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px 5px 10px;
}
.header-content {
  flex: auto;
  padding: 16px 0 16px clamp(32px, 2.75vw + 23px, 76px);
}
.dismiss {
  margin: 16px;
  height: fit-content;
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
.root {
  color: #010205;
  display: flex;
  flex-direction: column;
  position: relative;
  margin-left: auto;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  background: #FFF;
  opacity: 1;
  transform: initial;
  transition: opacity 0.5s cubic-bezier(0.77, 0, 0.175, 1) 0s, transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
  box-shadow: -3px 0px 30px rgba(0, 0, 0, 0.25);
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, #FFF, #FFF), linear-gradient(to top, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0)), linear-gradient(to bottom, rgba(204, 204, 204, 0.35), rgba(255, 255, 255, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}
@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: right, hasHeader: true, hasFooter: true, hasSubFooter: false, theme: dark 1`] = `
":host {
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  display: flex !important;
  position: fixed !important;
  z-index: 99998 !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(64, 64, 68, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.5s cubic-bezier(.16,1,.3,1), backdrop-filter 0.5s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.5s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.header {
  display: flex;
  flex-direction: row-reverse;
  justify-content: flex-end;
  background: #0E0E12;
  position: sticky;
  top: 0;
  z-index: 2;
}
.header--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 10px;
}
.header-content {
  flex: auto;
  padding: 16px 0 16px clamp(32px, 2.75vw + 23px, 76px);
}
.dismiss {
  margin: 16px;
  height: fit-content;
  border: 2px solid #0E0E12;
  border-radius: 4px;
  background: #0E0E12;
}
.root {
  color: #FBFCFF;
  display: flex;
  flex-direction: column;
  position: relative;
  margin-left: auto;
  box-sizing: border-box;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  background: #0E0E12;
  opacity: 1;
  transform: initial;
  transition: opacity 0.5s cubic-bezier(0.77, 0, 0.175, 1) 0s, transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
  box-shadow: -3px 0px 30px rgba(0, 0, 0, 0.25);
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  background-image: linear-gradient(to top, #0E0E12, #0E0E12), linear-gradient(to top, #0E0E12, #0E0E12), linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(14, 14, 18, 0)), linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(14, 14, 18, 0));
  background-position: bottom center, top center, bottom center, top center;
  background-repeat: no-repeat;
  background-size: 100% 20px, 100% 20px, 100% 10px, 100% 10px;
  background-attachment: local, local, scroll, scroll;
  overscroll-behavior-y: none;
}
.footer {
  background: #0E0E12;
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: sticky;
  z-index: 1;
  bottom: 0;
}
.footer--shadow {
  box-shadow: rgba(0, 0, 0, 0.6) 0px -5px 10px;
}
@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: true, position: right, hasHeader: true, hasFooter: true, hasSubFooter: true, theme: light 1`] = `
":host {
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  display: flex !important;
  position: fixed !important;
  z-index: 99998 !important;
  visibility: inherit !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  color-scheme: light dark !important;
}
:host::before {
  content: "" !important;
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  background: rgba(64, 64, 68, 0.67) !important;
  pointer-events: none !important;
  opacity: 1 !important;
  -webkit-backdrop-filter: blur(32px) !important;
  backdrop-filter: blur(32px) !important;
  transition: opacity 0.5s cubic-bezier(.16,1,.3,1), backdrop-filter 0.5s cubic-bezier(.16,1,.3,1), --webkit-backdrop-filter 0.5s cubic-bezier(.16,1,.3,1) !important;
}
:host([hidden]) {
  display: none !important;
}
.header {
  display: flex;
  flex-direction: row-reverse;
  justify-content: flex-end;
  background: #FFF;
  position: sticky;
  top: 0;
  z-index: 2;
}
.header--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px 5px 10px;
}
.header-content {
  flex: auto;
  padding: 16px 0 16px clamp(32px, 2.75vw + 23px, 76px);
}
.dismiss {
  margin: 16px;
  height: fit-content;
  border: 2px solid #FFF;
  border-radius: 4px;
  background: #FFF;
}
.root {
  color: #010205;
  display: flex;
  flex-direction: column;
  position: relative;
  margin-left: auto;
  box-sizing: border-box;
  overflow-y: auto;
  overscroll-behavior-y: none;
  width: var(--p-flyout-width, auto);
  height: 100%;
  min-width: 320px;
  max-width: var(--p-flyout-max-width, 1180px);
  background: #FFF;
  opacity: 1;
  transform: initial;
  transition: opacity 0.5s cubic-bezier(0.77, 0, 0.175, 1) 0s, transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
  box-shadow: -3px 0px 30px rgba(0, 0, 0, 0.25);
}
.content {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: relative;
  z-index: 0;
}
.footer {
  background: #FFF;
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
  position: sticky;
  z-index: 1;
  bottom: 0;
}
.footer--shadow {
  box-shadow: rgba(204, 204, 204, 0.35) 0px -5px 10px;
}
.sub-footer {
  padding: 16px clamp(32px, 2.75vw + 23px, 76px);
}
@media(hover:hover) {
  .dismiss:hover {
    background: #AFB0B3;
    border-color: #AFB0B3;
  }
}
"
`;
